Editted ans template file

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <li>
           Upload your <code class="large">ANSWER/index.js</code> file to Blackboard when you're finished
           <ul>
-            <li>If your answer requires more than js <b>one</b> file, import your other js files into <code class="">ANSWER/index.js</code>, and upload the <code class="large">ANSWER</code> <i>folder</i> as a zip file</li>
+            <li>If your answer requires more than <b>one</b> js file, import your other js files into <code class="">ANSWER/index.js</code>, and upload the <code class="large">ANSWER</code> <i>folder</i> as a zip file</li>
           </ul>
         </li>
       </ol>
